Fix search buttons on mobile

--- a/styles.css
+++ b/styles.css
@@ -131,6 +131,9 @@ body {
   .txt {
     font-size: 1rem;
   }
+  .btn {
+    display: flex;
+  }
   .submit {
     font-size: 1rem;
   }
